# ECEN_403_SICK_TEAM2

./: README.md
LiDARscripts/: lidar_detector1.py  lidar_detector2.py  lidar_log_11-11-2025_12.48.23.jsonl  lidar_log_11-11-2025_13.36.57.jsonl  lidar_logger.py
capstone_ws/: filtered_scan_data.csv
capstone_ws/src/bee_farm_sim/: package.xml  setup.cfg  setup.py
capstone_ws/src/bee_farm_sim/bee_farm_sim/description/: bee.xacro  camera.xacro  cube_bot.xacro  lidar.xacro  pole.xacro
capstone_ws/src/bee_farm_sim/bee_farm_sim/launch/: launch_sim.launch.py  rsp.launch.py  spawn_cube.launch.py
capstone_ws/src/bee_farm_sim/bee_farm_sim/scripts/: bee_heatmap_generator.py  cube_teleop.py  scan_filter_node.py  test_heatmap.py
capstone_ws/src/bee_farm_sim/bee_farm_sim/worlds/: farm.world  test.world
imagescripts/: clientImage.py  clientImage3.py  serverImage.py  serverImage2.py  serverImage3.py
